--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 15 12:14:16 KST 2020
-sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
+#Sun Aug 16 10:01:07 KST 2020
+sdk.dir=C\:\\Temp
